--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^7.8.0",
     "bootstrap": "^5.3.7",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
